# resume-grader

./: .gitignore  README.md
api/: docker-compose.yml  pyproject.toml
api/api/: main.py
api/apidoc/: APICollection.http
api/candidates/: pyproject.toml  router.py  schemas.py  service.py
api/grading/: llm_service.py  router.py  service.py
api/jobs/: router.py  schemas.py  service.py
app/: package-lock.json  package.json
app/hooks/: useApi.ts
app/src/app/: page.tsx
app/src/app/jobdetail/[id]/: page.tsx
app/src/components/: Candidate.tsx  Header.tsx  Jobs.tsx  LoadingState.tsx  Sidebar.tsx  home.tsx  job-detail.tsx  jobdetail.tsx  loading-home.tsx
app/src/components/icons/: index.tsx
app/types/: jobs.d.ts
